--- a/home.html
+++ b/home.html
@@ -6,48 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
 
     <title>The Sweet Tooth</title>
 </head>
 <body>
     <div class="home-bg">
-           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+           <nav class="navbar navbar-expand-lg navbar-light navbar-color">
+  <a class="navbar-brand" href="#">[Logo here]</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor03">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Gallery</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">Contact Us</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
-        <p>
+    <div class="title-position"> 
         <span class="title">The Sweet Tooth </span>
-         </p>
          <div class="center">
         <h3 class="subheading top-line">Melbourne's first dessert buffet restaurant</h3></div>
-
+      </div>
     
     </div>
 
     <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-4" style="background-color:aqua">
+
+          </div>
+          <div class="col-sm-12 col-md-8" style="background-color:grey"></div>
+        </div>
+      </div>
         
     </div>
 
