--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   <div class="main-content"> 
     <div class="home-bg">
            <nav class="navbar navbar-expand-lg navbar-light navbar-color">
-  <a class="navbar-brand" href="#">[Logo here]</a>
+  <a class="navbar-brand" href="#"><i class="fas fa-ice-cream fa-2x"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -49,12 +49,11 @@
     <div class="content">
       <section class = "container-fluid card-banner-start">
         <div class = "row mt-4 text-center">
-          <div class = "col-lg-6 m-auto pb-3">
-              <h1 class="card-banner-title">A dessert buffet? No way!</h1>
+          <div class = "col-lg-8 m-auto pb-3">
+              <h1 class="card-banner-title">About Us</h1>
               <i class="fas fa-cookie-bite fa-4x pb-3"></i>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique eros eu dolor finibus mattis. Fusce eleifend tristique eleifend. Morbi scelerisque ullamcorper ante, non semper ante venenatis ac. Nunc gravida viverra ipsum, maximus vestibulum magna porttitor sit amet. Proin at hendrerit libero.</p>
-              <button type="button" class="btn btn-outline-info mb-3">About Us</button>
-
+              <p>Donec in ullamcorper quam. Integer euismod blandit metus, ut mollis massa tempor sed. Vestibulum accumsan massa non gravida sollicitudin. Praesent faucibus nibh ante, vitae fermentum elit pulvinar et. Curabitur faucibus velit sit amet arcu dapibus auctor. In nisi nunc, semper sit amet nulla nec, rhoncus scelerisque tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum porta sodales maximus. Proin sollicitudin at eros in tincidunt. Morbi lacus erat, lobortis nec diam ut, aliquet viverra justo.</p>
           </div>
         </div>
       </section>
@@ -176,7 +175,7 @@
           
               <section class = "container-fluid card-banner-news">
                 <div class = "row mt-4 text-center ">
-                  <div class = "col-lg-6 m-auto pb-3">
+                  <div class = "col-lg-6 m-auto pb-3 feedback-bg">
                       <h1 class="card-banner-title">Newsletter</h1>
                       <i class="far fa-newspaper fa-4x pb-3"></i>
                       <h3>Enter your info to get our monthly newsletter</h3>
