--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,11 @@
     <div id="root"></div>
 
    
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+  <script src="/client/src/javascripts/scrollAnimate.js"></script>
   </body>
 </html>
